# WorkWithUs

./: .env.prod.example  .gitignore  CLAUDE.md  DEPLOY.md  ISSUES.md  README.md  docker-compose.prod.yml  docker-compose.yml
api/: .env.example  CLAUDE.md  Dockerfile  pyproject.toml  test_workflow.sh
api/migrations/models/: 0_20260301163907_init.py  1_20260301194103_add_projects_files_apps_comments.py
api/src/: config.py  logging.py  main.py
api/src/applications/: models.py  router.py  schemas.py  service.py
api/src/auth/: dependencies.py  router.py  schemas.py  service.py
api/src/comments/: models.py  router.py  schemas.py  service.py
api/src/files/: models.py  router.py  schemas.py  service.py  storage.py
api/src/projects/: models.py  router.py  schemas.py  service.py
api/src/skills/: models.py  router.py  schemas.py  service.py
api/src/users/: models.py  router.py  schemas.py  service.py
backend/: .coverage  .env  .env.prod.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  test.db
backend/alembic/: env.py
backend/alembic/versions/: 001_add_submission_and_revision_notes.py  002_add_unique_constraint_application.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  security.py
backend/app/database/: deps.py  session.py
backend/scripts/: backfill_status_history.py
backend/src/: main.py
backend/tests/: test_api.py
caddy/: Caddyfile  Dockerfile
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
nginx/: Dockerfile  nginx.conf
(+171 files in other folders)
